--- a/config/cradio.conf
+++ b/config/cradio.conf
@@ -1,6 +1,8 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 
+CONFIG_ZMK_MOUSE=y
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_KEYBOARD_NAME="swept"
